--- a/index.html
+++ b/index.html
@@ -4,20 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Random Choice Oicker</title>
+    <link rel="stylesheet" href="styles.css" />
+    <title>Random Choice Picker</title>
   </head>
   <body>
-    <div class="container">
-      <h3>
-        escreva as opções separadas por uma vírgula (,) <br />pressione enter
-        quando estiver pronto
-      </h3>
-      <textarea id="textarea" placeholder="Digite a opção"></textarea>
-      <div id="tags">
-        <div class="tag">opção 1</div>
-        <div class="tag">opção 2</div>
-        <div class="tag">opção 3</div>
-      </div>
-    </div>
+    <input type="text" id="option" onchange="enableButao()" />
+    <button onclick="addToOptions()" id="butao">Butão</button>
+    <pre id="array"></pre>
+    <script src="main.js"></script>
   </body>
 </html>
